--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,11 @@ services:
         - db_data:/var/lib/mysql
     restart: unless-stopped  
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 82:8080
+
 volumes:
   db_data:
