--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,32 +2,14 @@
 version: '3.8'
 
 services:
-  web:
-    build: .
+  pythonflask:
+    image: pythonapp
+
+  
+  nginx:
+    image: nginx
     ports: 
-      - "81:80"
+      - "80:80"
     volumes:
-      - ./html:/usr/share/nginx/html
-    restart: unless-stopped
-
-  db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
-    ports: 
-      - "3306:3306"
-    volumes:
-        - db_data:/var/lib/mysql
-    restart: unless-stopped  
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 82:8080
-
-volumes:
-  db_data:
+      - ./configs/nginx.conf:/etc/nginx/nginx.conf 
+  
